Make the calculator functional
Now all buttons are functional and the user can perform calculations

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+.body {
+    display: flex;
+    flex-direction: column;
+}
 .container {
     display: flex;
     flex-direction: column;
     background-color: blue;
     max-width: fit-content;
+    margin: auto;
 }
 
 .display {
