--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,109 @@
-.body {
+body {
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
 }
+
+ /* Containers */
 .container {
     display: flex;
     flex-direction: column;
-    background-color: blue;
-    max-width: fit-content;
-    margin: auto;
+    align-content: center;
+    gap: 10px;
+    padding: 20px;
+    background-color: #1c1c1c;
+    width: fit-content;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .display {
-    background-color: red;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #1c1c1c;
+    color: white;
+    height: 100px;
+    margin-right: 8px;
+    font-size: 36px;
 }
 
 .buttons-div {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
-.first-row, .sencond-row, .third-row, .fourth-row {
+/* Button Row Containers */
+
+.first-row, .second-row, .third-row, .fourth-row, .fifth-row {
     display: flex;
     justify-content: space-evenly;
+    gap: 8px;
+}
+
+/* General Button Styles */
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    border: none;
+    background-color: #505050;
+    color: white;
+    font-size: 28px;
+    transition: font-size 0.1s ease;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+button:active {
+    font-size: 22px;
+}
+
+/* More Specific Button Styles */
+
+.zeroBtn {
+    flex-grow: 1;
+}
+
+.erase svg {
+    height: 30px;
+    width: 30px;
+    transition: height 0.1s ease, width 0.1s ease;
+}
+
+.erase:active svg {
+    height: 24px;
+    width: 24px;
+}
+
+.all-clear, .erase, .percent {
+    background-color: #a2a2a2;
+    color: #1c1c1c;
+}
+
+.operator {
+    background-color: #fe9501;
+}
+
+/* Footer */
+
+p {
+    font-size: 16px;
+    margin: 0;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
